# HUMANOID

./: .gitignore  README.md
dependencies/imu_bno055/: CMakeLists.txt  package.xml
dependencies/imu_bno055/include/imu_bno055/: bno055_i2c_activity.h
dependencies/imu_bno055/msg/: Orientation.msg
dependencies/imu_bno055/src/: bno055_i2c_activity.cpp
docs/: learning-resources.md
humanoid/: CMakeLists.txt  package.xml  requirements.txt
humanoid/launch/: all.launch
humanoid/scripts/: config_workspace.sh  virtualenvw.sh
humanoid_control/: CMakeLists.txt  package.xml  requirements.txt  setup.py
humanoid_control/launch/: control.launch
humanoid_control/moves/: defend_left.csv  defend_right.csv  kick_left.csv  turn.csv  up_front.csv  wave.csv
humanoid_control/nodes/: control_node.py  manual_vision.py
humanoid_control/src/humanoid_control/: body_physics.py  control.py  moves.py  utils.py
humanoid_control/src/humanoid_control/k_solver/: core.py
humanoid_vision/: CMakeLists.txt  package.xml  requirements.txt  setup.py
humanoid_vision/launch/: vision.launch
humanoid_vision/nodes/: ball_detection.py
humanoid_vision/src/humanoid_vision/: object_detection.py
